== (unreleased)

* Make the RemoteDependency#try method use invoke_command instead of run, for sudo-ability [Matthias Marschall]

* Make locally executed commands in Windows more Windows-friendly [esad@esse.at]

* Added :scm_arguments variable for custom SCM arguments (subversion-only, currently) [David Abdemoulaie]

* Don't emit -p for sudo when :sudo_prompt is blank [Matthias Marschall]

* Copy symlinks when using rsync [Paul Paradise]

* Make sure git query-revision matches on exact branch name [grant@nightriot.com]

* Use -T <arg> to filter listed tasks by a pattern [Mathias Meyer, Geoffrey Grosenbach]

* Expose the #scm method on SCM::Base for building custom scm commands [Mathias Meyer]

* Start logging some locally executed commands [springyweb]

* Added HOSTFILTER environment variable for constraining tasks so they run only on hosts matching the given list of servers [Walter Smith]

* Make sure the glob matching for copy excludes does not delete parent directories [Fabio Akita]

* Ruby 1.9 compatibility [Jamis Buck]


== 2.5.0 / August 28, 2008

* Allow :gateway to be set to an array, in which case a chain of tunnels is created [Kerry Buckley]

* Allow HOSTS spec to override even non-existent roles [Mike Bailey]

* Sort releases via "ls -xt" instead of "ls -x" to allow for custom release names [Yan Pritzker]

* Convert arguments to -s and -S into integers, booleans, etc. based on whether the arguments appear to be those types [Jamis Buck]

* Add descriptions of -n and -d to the verbose help text [Jamis Buck]

* Make rollbacks work with processes that need the current directory to be valid in order to restart properly (e.g. mongrel_rails) [Jamis Buck]

* Rename deploy:rollback_code to deploy:rollback:code [Jamis Buck]

* Added parallel() helper for executing multiple different commands in parallel [Jamis Buck]

* Make sure a task only uses the last on_rollback block, once, on rollback [Jamis Buck]
