@@ -90,6 +90,10 @@ module Capistrano
             options[:verbose] ||= 0
           end
 
+          opts.on("-t", "--tool",
+            "Abbreviates the output of -T for tool integration."
+          ) { options[:tool] = true }
+
           opts.on("-V", "--version",
             "Display the Capistrano version, and exit."
           ) do
@@ -100,7 +104,10 @@ module Capistrano
 
           opts.on("-v", "--verbose",
             "Be more verbose. May be given more than once."
-          ) { options[:verbose] ||= 0; options[:verbose] += 1 }
+          ) do
+            options[:verbose] ||= 0
+            options[:verbose] += 1
+          end
 
           opts.on("-X", "--skip-system-config",
             "Don't load the system config file (capistrano.conf)"
